# l2-interop-research

./: CONTRIBUTING.md  Cargo.toml  README.md
docs/: ef_alignment.md  research_methodology.md
docs/security/: threat_model.md
research/literature/: cross_chain_protocols_survey.md
research/prototypes/: basic_concepts.md
research/standards/: erc7683_analysis.md
